<?xml version="1.0"?>
<package>
  <name>robot_maps</name>
  <version>0.1.0</version>
  <description>Map functionality for the robot.</description>
  <maintainer email="mathlin@kth.se">Mathias Lindblom</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ras_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ras_utils</run_depend>

</package>

